set width/height of images to avoid layout shifts

--- a/packages/plugin-packages/mashroom-portal-default-theme/src/frontend/sass/style.scss
+++ b/packages/plugin-packages/mashroom-portal-default-theme/src/frontend/sass/style.scss
@@ -352,7 +352,7 @@ header {
         img {
             display: inline-block;
             height: 40px;
-            padding-left: 20px;
+            margin-left: 20px;
         }
     }
 
